# AutoXuexiPlaywright

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pdm-update.yaml  stale.yml  test-and-build.yml
docs/modules/: README.md  answer-source.md  captcha-handler.md  config-parser.md  migrations.md  reader.md  record-supported-answer-source.md  task.md
resources/: org.AutoXuexiPlaywright.AutoXuexiPlaywright.desktop  ui.qrc
resources/translations/zh_CN/LC_MESSAGES/: autoxuexiplaywright.po
resources/ui/: ui.qss
scripts/: build.py
src/autoxuexiplaywright/: __init__.py  __main__.py
src/autoxuexiplaywright/config/: __init__.py  config.py  json_parser.py  utils.py
src/autoxuexiplaywright/event/: __init__.py  event.py  eventid.py  finished_event.py  qr_updated_event.py  score_updated_event.py  status_updated_event.py  utils.py
src/autoxuexiplaywright/localize/: __init__.py  gettext_.py
src/autoxuexiplaywright/module/: __init__.py  loader.py  module.py  utils.py
src/autoxuexiplaywright/processor/: __init__.py
src/autoxuexiplaywright/processor/answer_sources/: sqlite.py
src/autoxuexiplaywright/processor/captcha_handlers/: drag.py
src/autoxuexiplaywright/processor/readers/: simple_reader.py
src/autoxuexiplaywright/processor/tasks/: daily_test.py  login.py  news.py  read.py  test.py  utils.py  video.py
src/autoxuexiplaywright/sdk/: __init__.py  answer_source.py  captcha_handler.py  config_parser.py  reader.py  record_supported_answer_source.py  task.py
src/autoxuexiplaywright/storage/: __init__.py  cache.py  config.py  data.py  resources.py  state.py  utils.py
src/autoxuexiplaywright/ui/qt/: __init__.py  controlwidget.py  job.py  logdisplaywidget.py  operationwidget.py  qhandler.py  qlabelwithcheckbox.py  qlabelwithcombobox.py  qlabelwithlineedit.py  qlabelwithpathsetter.py  qlabelwithplaintextedit.py  qtranslucentbackgroundframelesswidget.py  settingconfigcomplexitemcontainer.py  settingconfigproxywidget.py  settingconfigwidget.py  settingoperationwidget.py  settingwindow.py  titlewidget.py  utils.py  window.py
src/autoxuexiplaywright/ui/tui/: __init__.py
tests/: __init__.py
